[project]
name = "okc_py"
version = "0.0.1"
description = "OKC API Python wrapper"
readme = "README.md"
requires-python = ">=3.14"

authors = [
    "Roman Chursanov roman@chrsnv.ru"
]
repository = "https://github.com/STP-Team/okc-py"

dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "setuptools>=80.9.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[dependency-groups]
dev = []
