[project]
name = "okc_py"
version = "0.0.5"
description = "OKC API Python wrapper"
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Roman Chursanov", email = "roman@chrsnv.ru" }
]

dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.urls]
repository = "https://github.com/STP-Team/okc-py"

[tool.uv.workspace]
members = [
    ".",
]

[dependency-groups]
dev = [
    "ty>=0.0.8",
]
